- force portable mode during TB_BLACKENED - disable auto-updates when building TB_BLACKENED - convert some environment variables to config evaluatable variables. - add $BIGAME feature to "game path" to make it use the game path for.. any game config.. from the environment variable. - update the Vigil7 GameConfig.cfg; use "." for searchpath; because BIGAME includes `base/`

--- a/app/resources/games/Vigil7/GameConfig.cfg
+++ b/app/resources/games/Vigil7/GameConfig.cfg
@@ -7,7 +7,7 @@
         { "format": "Quake2" }
     ],
     "filesystem": {
-        "searchpath": "base",
+        "searchpath": ".",
         "packageformat": { "extension": ".pak", "format": "idpak" }
     },
     "materials": {
@@ -282,10 +282,8 @@
             } // 1 << 29
         ]
     },
-    "softMapBounds":"-16384 -16384 -16384 16384 16384 16384",
+    "softMapBounds":"-32768 -32768 -32768 32768 32768 32768",
     "compilationTools": [
-        { "name": "bsp", "description": "Path to your directory containing your bsp compiler. ${bsp}." },
-        { "name": "vis", "description": "Path to your directory containing your vis compiler. ${vis}" },
-        { "name": "light", "description": "Path to your directory containing your light compiler. ${light}" }
+        { "name": "bimap", "description": "Path to your directory containing your bsp compiler. ${bimap}." }
     ]
 }
